<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one"
        style="@style/box_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two"
        style="@style/box_style"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:text="@string/box_two"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_one" />

    <TextView
        android:id="@+id/box_three"
        style="@style/box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@id/box_one" />

    <TextView
        android:id="@+id/box_four"
        style="@style/box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@id/box_three" />

    <TextView
        android:id="@+id/box_five"
        style="@style/box_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/box_two"
        app:layout_constraintTop_toBottomOf="@id/box_four" />

    <TextView
        android:id="@+id/tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="208dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/how_to_play"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_two" />

    <TextView
        android:id="@+id/explain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoSizeMaxTextSize="14sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="monospace"
        android:maxLines="1"
        android:text="@string/taps_the_boxes_and_screen"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tutorial" />

    <Button
        android:id="@+id/red_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:backgroundTint="@color/red"
        android:text="@string/red"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/yellow_button"
        app:layout_constraintEnd_toStartOf="@+id/yellow_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yellow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/yellow"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/green_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red_button"
        app:layout_constraintTop_toBottomOf="@id/tutorial" />

    <Button
        android:id="@+id/green_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/green"
        android:text="@string/green"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/yellow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yellow_button" />

</androidx.constraintlayout.widget.ConstraintLayout>